<resources>
    <string name="app_name" translatable="false">50pTRIP</string>
    <string name="text_sound_off">Sound off</string>
    <string name="text_sound_on">Sound on</string>
    <string name="text_help">Help</string>
    <string name="text_logout">Logout</string>
    <string name="text_history">History</string>
    <string name="text_log_in">Login</string>
    <string name="text_contact_us">Contact us</string>
    <string name="text_off_line">Offline</string>
    <string name="text_register">Register</string>
    <string name="text_trip_history">Trip history </string>
    <string name="text_trip_history_detail">Trip history detail</string>
    <string name="text_email">Email</string>
    <string name="text_hint_enter_email">Email</string>
    <string name="text_enter_country_name">Search country</string>
    <string name="text_password">Password</string>
    <string name="text_fast_name_hint">First name</string>
    <string name="text_last_name_hint">Last name</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_hint_enter_password">Password</string>
    <string name="text_hint_select_country">Select country</string>
    <string name="text_hint_select_city">Select city</string>
    <string name="text_feed_back">Feedback</string>
    <string name="text_bio_hint">Bio</string>
    <string name="text_address_hint">Address</string>
    <string name="text_zip_code_hint">Zipcode</string>
    <string name="text_pass_current_hint">Current password</string>
    <string name="text_pass_new_hint">New Password</string>
    <string name="text_pass_retype_hint">Confirm new password</string>
    <string name="text_number_hint">Phone</string>
    <string name="text_phone_no_hint">Phone no.</string>
    <string name="text_submit">Submit</string>
    <string name="text_share">Share</string>
    <string name="text_invoice">Invoice</string>
    <string name="text_base_price">Base price</string>
    <string name="text_distance_cost">Distance cost</string>
    <string name="text_time_cost">Time cost</string>
    <string name="text_referral_bonus">Referral bonus</string>
    <string name="text_tax">Tax</string>
    <string name="text_tax_price">Tax price</string>
    <string name="text_tax_total">Tax total</string>
    <string name="text_promo_bonus">Promo </string>
    <string name="text_total">Total</string>
    <string name="text_exit_caps">Exit</string>
    <string name="text_comment_hint">Write about your experience. We are always glad to hear from you. </string>
    <string name="text_comment_caps">Comment</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_send">Send</string>
    <string name="text_est_time">Est. time</string>
    <string name="text_est_distance">Est. distance</string>
    <string name="text_payment_in">Payment in</string>
    <string name="text_select_date">Select date</string>
    <string name="text_destination_address">Destination address</string>
    <string name="text_pick_up_address">Pickup address</string>
    <string name="text_country_codes">Select country</string>
    <string name="text_taxi_model">Taxi model</string>
    <string name="text_taxi_number">Taxi registration number</string>
    <string name="text_go_offline">Go Offline</string>
    <string name="text_go_online">Go Online</string>
    <string name="text_profile">Profile</string>
    <string name="text_accept">Accept </string>
    <string name="text_reject">Decline </string>
    <string name="text_coming">Tap When You Start</string>
    <string name="text_arrived">Tap When You Arrive</string>
    <string name="text_trip_start">Tap When You Start Trip</string>
    <string name="text_trip_end">Tap When You End Trip</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_today">Today</string>
    <string name="text_pick_up_loc">Pick up location </string>
    <string name="text_my_location">My location </string>
    <string name="text_drop_location">Drop location </string>
    <string name="text_account_yet">Don\'t have an account yet?</string>
    <string name="text_already_account">Already have an account?</string>
    <string name="text_create_account">Create an account</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_remaining">remaining</string>
    <string name="text_unit_mins" translatable="false">min</string>
    <string name="text_unit_kms" translatable="false">km</string>
    <string name="text_unit_km_mins" translatable="false">km/min</string>
    <string name="text_unit_per_min" translatable="false">/min</string>
    <string name="text_take_a_picture_and_upload">Take a picture and upload from gallery</string>
    <string name="text_remove">Remove</string>
    <string name="text_Document">Document</string>
    <string name="text_no_destination">Destination address is not set by user</string>
    <string name="text_admin_alert">Admin alert!</string>
    <string name="text_card">Card</string>
    <string name="text_cash">Cash</string>
    <string name="text_re_try">Retry</string>
    <string name="text_i_am_sure">I\'m sure</string>
    <string name="text_settings">Settings</string>
    <string name="text_version">App version</string>
    <string name="text_total_time">Total time</string>
    <string name="text_total_distance">Total distance</string>
    <string name="text_distance_price">Distance price</string>
    <string name="text_time_price">Time price</string>
    <string name="text_error">Error</string>
    <string name="text_change_password">Change password</string>
    <string name="text_verify_account">Verify account</string>
    <string name="text_unit_per_distance">Per </string>
    <string name="text_unit_per_time">/min</string>
    <string name="text_cancel_trip">Cancel trip</string>
    <string name="text_other">Other</string>
    <string name="text_enter_cancel_reason_hint">Enter cancellation reason</string>
    <string name="text_city_name">Select city</string>
    <string name="text_register_type">Register type</string>
    <string name="text_verify_detail">Verify detail</string>
    <string name="text_email_otp">Email otp</string>
    <string name="text_phone_otp">Phone otp</string>
    <string name="text_verify">Verify</string>
    <string name="text_visitor_type">Visitor type</string>
    <string name="text_caution">Caution!</string>
    <string name="text_add_city">Add city</string>
    <string name="text_request_sound">Request alert</string>
    <string name="text_request_sound_description">Play sound when you receive new request.</string>
    <string name="text_pick_up_sound">Pickup alert</string>
    <string name="text_pick_up_sound_description">Play sound when you are near to pickup
        location.</string>
    <string name="text_wait_time_cost">Wait time cost</string>
    <string name="text_surge_price">Surge price</string>
    <string name="text_discount">Discount</string>
    <string name="text_payment_with_card">Pay by card</string>
    <string name="text_payment_with_cash">Pay by cash</string>
    <string name="text_defult_string">00</string>
    <string name="text_click_twice">Click twice to end trip.</string>
    <string name="text_you_canceled_a_trip">Cancelled Trip </string>
    <string name="msg_are_you_sure">Are you sure?</string>
    <string name="msg_gps_enable">Your GPS seems to be disabled. Please enable it.</string>
    <string name="msg_internet_enable">Your Internet seems to be disabled. Please enable it.</string>
    <string name="msg_loading">Loading&#8230;</string>
    <string name="msg_waiting_for_upload_document">Waiting for documents to get uploaded&#8230;</string>
    <string name="msg_waiting_for_get_documents">Waiting for documents to get displayed&#8230;</string>
    <string name="msg_waiting_for_registering">Waiting to get registered&#8230;</string>
    <string name="msg_waiting_for_ratting">Waiting to send feedback&#8230;</string>
    <string name="msg_waiting_for_sing_in">Wait till we log you in&#8230;</string>
    <string name="msg_waiting_for_history">Waiting for history&#8230;</string>
    <string name="msg_waiting_for_detail_history">Waiting for detailed history&#8230;</string>
    <string name="msg_waiting_for_invoice">Waiting for invoice&#8230;</string>
    <string name="msg_waiting_for_cancel_trip">Cancelling trip, Please wait&#8230;</string>
    <string name="msg_waiting_for_log_out">Please wait while we log you out&#8230;</string>
    <string name="msg_waiting_for_update_profile">Updating profile, Please wait&#8230;</string>
    <string name="msg_waiting_for_trip_end">Waiting for trip to get completed&#8230;</string>
    <string name="msg_waiting_for_tip">Waiting for tip&#8230; </string>
    <string name="msg_unable_get_image_from_fb"> Unable to get image from facebook</string>
    <string name="msg_on_screen">All Copyrights Reserved</string>
    <string name="msg_enter_name">Please enter a first name.</string>
    <string name="msg_enter_lname">Please enter a last name.</string>
    <string name="msg_enter_number">Please enter a mobile number.</string>
    <string name="msg_enter_valid_number">Please enter a valid mobile number.</string>
    <string name="msg_enter_email">Please enter an email id.</string>
    <string name="msg_enter_password">Please enter a password.</string>
    <string name="msg_enter_valid_email">Please enter a valid email id.</string>
    <string name="msg_enter_valid_password">Please enter password greater than 6 characters.</string>
    <string name="msg_no_item">No card details to be displayed.</string>
    <string name="msg_empty_model">Please enter a taxi model.</string>
    <string name="msg_empty_taxi_no">Please enter a taxi registration number.</string>
    <string name="msg_plz_select_from_date">Please select From date.</string>
    <string name="msg_plz_select_to_date">Please select To date.</string>
    <string name="msg_plz_select_valid_date">Please select a valid To date.</string>
    <string name="msg_incorrect_confirm_password">Your confirm password does not match password. </string>
    <string name="msg_under_review">You will receive confirmation email\nonce admin approve you.</string>
    <string name="msg_want_to_move">Do you want to move?</string>
    <string name="msg_you_are_offline">You are offline now. Do you want to go online?</string>
    <string name="text_push_notification">Push notification</string>
    <string name="text_push_notification_description">Sound play when push notification.</string>
    <string name="text_id_number">Id number :</string>
    <string name="text_expire_date">Exp.date :</string>
    <string name="text_heat_map">Heat map</string>
    <string name="text_heat_map_setting_description">Show areas where new requests created in last hour.</string>
    <string name="text_language">Language</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_accept_request_type">Which user request do you want ?</string>
    <string name="text_select_languages_you_are_speak">Select languages you can speak</string>
    <string name="msg_referral">You can add referral code provided by your friend here to get free
        credits. If you do not have one or don\'t want to insert then just click on Skip button
        below.
    </string>
    <string name="error_referral_invalid">Please enter valid referral code. </string>
    <string name="text_referral">Referral</string>
    <string name="text_enter_ref_code">Referral code</string>
    <string name="text_skip">Skip</string>
    <string name="txtpendingprofile">*Your request to edit details are pending with admin. Details will be updated once approved.</string>
</resources>