<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_app_theme_bg"
              android:orientation="vertical"
              tools:context="com.elluminati.eber.driver.SettingActivity">


    <include layout="@layout/toolbar_app_custom"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_padding"
            android:layout_marginBottom="@dimen/activity_horizontal_padding"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.elluminati.eber.driver.components.MyFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_request_sound"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general"/>

                    <com.elluminati.eber.driver.components.MyFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:text="@string/text_request_sound_description"
                        android:textColor="@color/color_app_label"
                        android:textSize="@dimen/size_label"/>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchRequestSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.elluminati.eber.driver.components.MyFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_pick_up_sound"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general"/>

                    <com.elluminati.eber.driver.components.MyFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:text="@string/text_pick_up_sound_description"
                        android:textColor="@color/color_app_label"
                        android:textSize="@dimen/size_label"/>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchPickUpSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.elluminati.eber.driver.components.MyFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_push_notification"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general"/>

                    <com.elluminati.eber.driver.components.MyFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:text="@string/text_push_notification_description"
                        android:textColor="@color/color_app_label"
                        android:textSize="@dimen/size_label"/>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchPushNotificationSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.elluminati.eber.driver.components.MyFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_heat_map"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general"/>

                    <com.elluminati.eber.driver.components.MyFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:text="@string/text_heat_map_setting_description"
                        android:textColor="@color/color_app_label"
                        android:textSize="@dimen/size_label"/>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchHeatMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.elluminati.eber.driver.components.MyFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/text_language"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_bill_margin_two"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.elluminati.eber.driver.components.MyFontTextView
                            android:id="@+id/tvLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="English"
                            android:textColor="@color/color_app_label"
                            android:textSize="@dimen/size_general_small"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_icon_language"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.elluminati.eber.driver.components.MyAppTitleFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_padding"
                        android:text="@string/text_accept_request_type"
                        android:textColor="@color/color_app_text"
                        android:textSize="@dimen/size_general"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_bill_margin_two"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:text="@string/text_male"/>

                        <CheckBox
                            android:id="@+id/cbFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_female"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <com.elluminati.eber.driver.components.MyFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_select_languages_you_are_speak"
                    android:textColor="@color/color_app_text"
                    android:textSize="@dimen/size_general"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvSpeakingLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_bill_margin_two">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_horizontal_padding">

                <com.elluminati.eber.driver.components.MyAppTitleFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_version"
                    android:textColor="@color/color_app_text"
                    android:textSize="@dimen/size_general"/>

                <com.elluminati.eber.driver.components.MyFontTextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_app_text"
                    android:textSize="@dimen/size_general"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>